kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carmodpicker-backend-svc
spec:
  selector:
    app: carmodpicker-backend
  ports:
  - protocol: TCP
    port: 8000 # Port the service will listen on
    targetPort: 8000 # Port the pods are listening on
  type: LoadBalancer
