kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc # This is the hostname backend will use to connect to PG

spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30432
    protocol: TCP
    name: postgresdb
  selector:
    app: postgres
